Update swagger from scratch
