# python-final/samsara/models/address_response.py
@@ -18,7 +18,7 @@ import six
 from samsara.configuration import Configuration
 
 
-class DefaultError(object):
+class AddressResponse(object):
     """NOTE: This class is auto generated by OpenAPI Generator.
     Ref: https://openapi-generator.tech
 
@@ -33,77 +33,73 @@ class DefaultError(object):
                             and the value is json key in definition.
     """
     openapi_types = {
-        'message': 'str',
-        'request_id': 'str'
+        'data': 'list[Address]',
+        'pagination': 'Pagination'
     }
 
     attribute_map = {
-        'message': 'message',
-        'request_id': 'requestId'
+        'data': 'data',
+        'pagination': 'pagination'
     }
 
-    def __init__(self, message=None, request_id=None, local_vars_configuration=None):  # noqa: E501
-        """DefaultError - a model defined in OpenAPI"""  # noqa: E501
+    def __init__(self, data=None, pagination=None, local_vars_configuration=None):  # noqa: E501
+        """AddressResponse - a model defined in OpenAPI"""  # noqa: E501
         if local_vars_configuration is None:
             local_vars_configuration = Configuration()
         self.local_vars_configuration = local_vars_configuration
 
-        self._message = None
-        self._request_id = None
+        self._data = None
+        self._pagination = None
         self.discriminator = None
 
-        self.message = message
-        self.request_id = request_id
+        self.data = data
+        self.pagination = pagination
 
     @property
-    def message(self):
-        """Gets the message of this DefaultError.  # noqa: E501
+    def data(self):
+        """Gets the data of this AddressResponse.  # noqa: E501
 
-        The message of the error.  # noqa: E501
 
-        :return: The message of this DefaultError.  # noqa: E501
-        :rtype: str
+        :return: The data of this AddressResponse.  # noqa: E501
+        :rtype: list[Address]
         """
-        return self._message
+        return self._data
 
-    @message.setter
-    def message(self, message):
-        """Sets the message of this DefaultError.
+    @data.setter
+    def data(self, data):
+        """Sets the data of this AddressResponse.
 
-        The message of the error.  # noqa: E501
 
-        :param message: The message of this DefaultError.  # noqa: E501
-        :type: str
+        :param data: The data of this AddressResponse.  # noqa: E501
+        :type: list[Address]
         """
-        if self.local_vars_configuration.client_side_validation and message is None:  # noqa: E501
-            raise ValueError("Invalid value for `message`, must not be `None`")  # noqa: E501
+        if self.local_vars_configuration.client_side_validation and data is None:  # noqa: E501
+            raise ValueError("Invalid value for `data`, must not be `None`")  # noqa: E501
 
-        self._message = message
+        self._data = data
 
     @property
-    def request_id(self):
-        """Gets the request_id of this DefaultError.  # noqa: E501
+    def pagination(self):
+        """Gets the pagination of this AddressResponse.  # noqa: E501
 
-        The ID of the request.  # noqa: E501
 
-        :return: The request_id of this DefaultError.  # noqa: E501
-        :rtype: str
+        :return: The pagination of this AddressResponse.  # noqa: E501
+        :rtype: Pagination
         """
-        return self._request_id
+        return self._pagination
 
-    @request_id.setter
-    def request_id(self, request_id):
-        """Sets the request_id of this DefaultError.
+    @pagination.setter
+    def pagination(self, pagination):
+        """Sets the pagination of this AddressResponse.
 
-        The ID of the request.  # noqa: E501
 
-        :param request_id: The request_id of this DefaultError.  # noqa: E501
-        :type: str
+        :param pagination: The pagination of this AddressResponse.  # noqa: E501
+        :type: Pagination
         """
-        if self.local_vars_configuration.client_side_validation and request_id is None:  # noqa: E501
-            raise ValueError("Invalid value for `request_id`, must not be `None`")  # noqa: E501
+        if self.local_vars_configuration.client_side_validation and pagination is None:  # noqa: E501
+            raise ValueError("Invalid value for `pagination`, must not be `None`")  # noqa: E501
 
-        self._request_id = request_id
+        self._pagination = pagination
 
     def to_dict(self):
         """Returns the model properties as a dict"""
@@ -139,14 +135,14 @@ class DefaultError(object):
 
     def __eq__(self, other):
         """Returns true if both objects are equal"""
-        if not isinstance(other, DefaultError):
+        if not isinstance(other, AddressResponse):
             return False
 
         return self.to_dict() == other.to_dict()
 
     def __ne__(self, other):
         """Returns true if both objects are not equal"""
-        if not isinstance(other, DefaultError):
+        if not isinstance(other, AddressResponse):
             return True
 
         return self.to_dict() != other.to_dict()
