# python-final/samsara/models/pagination.py
@@ -18,7 +18,7 @@ import six
 from samsara.configuration import Configuration
 
 
-class DefaultError(object):
+class Pagination(object):
     """NOTE: This class is auto generated by OpenAPI Generator.
     Ref: https://openapi-generator.tech
 
@@ -33,77 +33,77 @@ class DefaultError(object):
                             and the value is json key in definition.
     """
     openapi_types = {
-        'message': 'str',
-        'request_id': 'str'
+        'end_cursor': 'str',
+        'has_next_page': 'bool'
     }
 
     attribute_map = {
-        'message': 'message',
-        'request_id': 'requestId'
+        'end_cursor': 'endCursor',
+        'has_next_page': 'hasNextPage'
     }
 
-    def __init__(self, message=None, request_id=None, local_vars_configuration=None):  # noqa: E501
-        """DefaultError - a model defined in OpenAPI"""  # noqa: E501
+    def __init__(self, end_cursor=None, has_next_page=None, local_vars_configuration=None):  # noqa: E501
+        """Pagination - a model defined in OpenAPI"""  # noqa: E501
         if local_vars_configuration is None:
             local_vars_configuration = Configuration()
         self.local_vars_configuration = local_vars_configuration
 
-        self._message = None
-        self._request_id = None
+        self._end_cursor = None
+        self._has_next_page = None
         self.discriminator = None
 
-        self.message = message
-        self.request_id = request_id
+        self.end_cursor = end_cursor
+        self.has_next_page = has_next_page
 
     @property
-    def message(self):
-        """Gets the message of this DefaultError.  # noqa: E501
+    def end_cursor(self):
+        """Gets the end_cursor of this Pagination.  # noqa: E501
 
-        The message of the error.  # noqa: E501
+        Cursor representing the last element in the response. Feed this value into an `after` parameter to get the next page of results. This will be an empty string if `hasNextPage` is `false`.  # noqa: E501
 
-        :return: The message of this DefaultError.  # noqa: E501
+        :return: The end_cursor of this Pagination.  # noqa: E501
         :rtype: str
         """
-        return self._message
+        return self._end_cursor
 
-    @message.setter
-    def message(self, message):
-        """Sets the message of this DefaultError.
+    @end_cursor.setter
+    def end_cursor(self, end_cursor):
+        """Sets the end_cursor of this Pagination.
 
-        The message of the error.  # noqa: E501
+        Cursor representing the last element in the response. Feed this value into an `after` parameter to get the next page of results. This will be an empty string if `hasNextPage` is `false`.  # noqa: E501
 
-        :param message: The message of this DefaultError.  # noqa: E501
+        :param end_cursor: The end_cursor of this Pagination.  # noqa: E501
         :type: str
         """
-        if self.local_vars_configuration.client_side_validation and message is None:  # noqa: E501
-            raise ValueError("Invalid value for `message`, must not be `None`")  # noqa: E501
+        if self.local_vars_configuration.client_side_validation and end_cursor is None:  # noqa: E501
+            raise ValueError("Invalid value for `end_cursor`, must not be `None`")  # noqa: E501
 
-        self._message = message
+        self._end_cursor = end_cursor
 
     @property
-    def request_id(self):
-        """Gets the request_id of this DefaultError.  # noqa: E501
+    def has_next_page(self):
+        """Gets the has_next_page of this Pagination.  # noqa: E501
 
-        The ID of the request.  # noqa: E501
+        Indicates whether there are more pages of results for this query.  # noqa: E501
 
-        :return: The request_id of this DefaultError.  # noqa: E501
-        :rtype: str
+        :return: The has_next_page of this Pagination.  # noqa: E501
+        :rtype: bool
         """
-        return self._request_id
+        return self._has_next_page
 
-    @request_id.setter
-    def request_id(self, request_id):
-        """Sets the request_id of this DefaultError.
+    @has_next_page.setter
+    def has_next_page(self, has_next_page):
+        """Sets the has_next_page of this Pagination.
 
-        The ID of the request.  # noqa: E501
+        Indicates whether there are more pages of results for this query.  # noqa: E501
 
-        :param request_id: The request_id of this DefaultError.  # noqa: E501
-        :type: str
+        :param has_next_page: The has_next_page of this Pagination.  # noqa: E501
+        :type: bool
         """
-        if self.local_vars_configuration.client_side_validation and request_id is None:  # noqa: E501
-            raise ValueError("Invalid value for `request_id`, must not be `None`")  # noqa: E501
+        if self.local_vars_configuration.client_side_validation and has_next_page is None:  # noqa: E501
+            raise ValueError("Invalid value for `has_next_page`, must not be `None`")  # noqa: E501
 
-        self._request_id = request_id
+        self._has_next_page = has_next_page
 
     def to_dict(self):
         """Returns the model properties as a dict"""
@@ -139,14 +139,14 @@ class DefaultError(object):
 
     def __eq__(self, other):
         """Returns true if both objects are equal"""
-        if not isinstance(other, DefaultError):
+        if not isinstance(other, Pagination):
             return False
 
         return self.to_dict() == other.to_dict()
 
     def __ne__(self, other):
         """Returns true if both objects are not equal"""
-        if not isinstance(other, DefaultError):
+        if not isinstance(other, Pagination):
             return True
 
         return self.to_dict() != other.to_dict()
